--- a/ResortApplication.Web/ResortApplication.Web.csproj
+++ b/ResortApplication.Web/ResortApplication.Web.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
         <Folder Include="ViewModels\"/>
+        <Folder Include="wwwroot\images\Villa\"/>
     </ItemGroup>
 
 </Project>
