Integrate Stripe payment processing; update booking flow and add error handling for booking not found

--- a/ResortApplication.Application/ResortApplication.Application.csproj
+++ b/ResortApplication.Application/ResortApplication.Application.csproj
@@ -10,4 +10,8 @@
         <ProjectReference Include="..\ResortApplication.Domain\ResortApplication.Domain.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Common\Configuration\" />
+    </ItemGroup>
+
 </Project>
